--- a/Resources/translations/id/community.yml
+++ b/Resources/translations/id/community.yml
@@ -1,1 +1,5 @@
 ---
+feed-head-community: Community
+feed-head-projects: Projects
+feed-header: 'Recent activity'
+feed-side-top_ten: 'Top ten co-financiers'
