--- a/Resources/translations/id/labels.yml
+++ b/Resources/translations/id/labels.yml
@@ -1,1 +1,7 @@
 ---
+categories-lb: Categories
+glossary-lb: Glossary
+nodes-lb: Channels
+recent-lb: 'Recent activity'
+sponsors-lb: 'Institutional support'
+stats-lb: Stats & data
