--- a/Resources/translations/id/bluead.yml
+++ b/Resources/translations/id/bluead.yml
@@ -24,7 +24,7 @@ register-confirm_mail-fail: 'There has been an error when sending the account ac
 register-confirm_mail-success: 'Account activation message sent. If it you don''t find it on your Inbox, check your /Spam folder.'
 review-ajax-alert: 'Evaluation / feedback fields will be automatically updated when changed'
 review-closed-alert: 'You marked the review as finished, no more changes can be done.'
-user-login-required: 'You have to <a href="/user/login">sign in</a> to interact with the Goteo community'
+user-login-required: 'Silahkan <a href="/user/login">sign in</a> untuk berdonasi'
 user-login-required-access: 'You have to sign in or ask for permission to get access to this section'
 user-login-required-to_create: 'You have to sign in to create a project'
 user-login-required-to_invest: 'You have to sign in to co-finance this project'
